--- a/hike-quest-app/src/views/SingleThread/SingleThread.css
+++ b/hike-quest-app/src/views/SingleThread/SingleThread.css
@@ -1,21 +1,12 @@
 .userContainer {
     display: flex;
-    justify-content: left;
-}
-
-.userName {
-    display: contents;
-    justify-content: left;
-    margin: 0;
-}
-
-.userType {
-    margin: 0;
-    font-size: 12px;
+    align-items: start;
+    justify-content: space-between;
+    gap: 12px;
+    padding: 10px;
 }
 
 .profilePic {
-    margin: 10px;
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -23,17 +14,77 @@
     object-fit: cover;
 }
 
+.userInfo {
+    display: flex;
+    gap: 10px;
+}
+
+.userType {
+    margin: 0;
+    font-size: medium;
+}
+
+.userTypeComment {
+    margin: 0;
+    font-size: small;
+}
+
+
+.userNameComment {
+    margin: 0;
+    font-size: medium;
+}
+
+.userName {
+    margin: 0;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+
 .threadContainer {
     border-style: solid;
     border-radius: 10px;
     border-color: black;
 }
 
+.threadCreatedOn {
+    font-size: 12px;
+}
+
+.threadTitle {
+    width: 100%;
+    font-size: x-large;
+    font-weight: normal;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 10px;
+    box-sizing: border-box;
+
+}
+
+@media screen and (max-width: 768px) {
+    .threadTitle {
+        font-size: large;
+
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .threadTitle {
+        font-size: medium;
+    }
+}
+
 .actualThread {
     display: flex;
+    text-align: center;
     justify-content: center;
     margin: 20px;
     padding: 20px;
+    font-size: larger;
     border-style: solid;
     border-radius: 10px;
     border-color: rgb(0, 0, 0);
@@ -42,10 +93,18 @@
 }
 
 .threadButtons {
-    background-color: wheat;
-    color: rgb(58, 129, 25);
+    background-color: rgb(99, 236, 112);
+    color: rgb(26, 25, 25);
     margin: 5px;
-    margin-right: 1050px;
+    padding-inline: 20px;
+    padding-block: 10px;
+    border-radius: 20px;
+    justify-content: flex-end;
+}
+
+.commentButton {
+    text-align: right;
+    width: 100%;
 }
 
 .buttonContainer {
@@ -53,6 +112,21 @@
     margin-bottom: 10px;
     display: flex;
     justify-content: left;
+}
+
+.singleComment {
+    margin-bottom: 50px
+}
+
+.commentBox {
+    resize: none;
+    width: 100%;
+    height: 40px;
+    padding: 10px;
+    font-size: 14px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
 }
 
 .commentsHeader {
@@ -63,7 +137,7 @@
     display: block;
     margin: 20px;
     padding: 20px;
-    border-style: hidden;
+    border-style: solid;
     border-radius: 10px;
     border-color: rgb(0, 0, 0);
 }
@@ -71,15 +145,15 @@
 .actualComment {
     display: block;
     text-align: left;
-    margin: 20px 0;
     padding: 20px;
-    border-style: dashed;
+    border-style: dotted;
     border-radius: 10px;
     border-color: rgb(0, 0, 0);
     word-wrap: break-word;
     overflow-wrap: break-word;
-
+    margin: 0;
 }
+
 
 hr {
     width: 50%;
