thread likes count & style

--- a/hike-quest-app/src/views/SingleThread/SingleThread.css
+++ b/hike-quest-app/src/views/SingleThread/SingleThread.css
@@ -42,10 +42,7 @@
 }
 
 
-.threadContainer {
-    border: 2px dashed;
-    border-style: dashed;
-}
+.threadContainer {}
 
 
 .threadCreatedOn {
@@ -103,6 +100,7 @@
 
 .threadButtons {
     background-color: rgb(99, 236, 112);
+    border: 3px solid transparent;
     color: rgb(26, 25, 25);
     border-color: transparent;
     margin: 5px;
@@ -110,14 +108,23 @@
     padding-block: 10px;
     border-radius: 20px;
     justify-content: flex-end;
+    transition: all 0.3s ease-in-out;
+}
+
+.threadButtons svg {
+    margin-right: 4px;
+}
+
+.threadButtons.like0 {
+    background-color: transparent;
+    border: 3px solid rgb(99, 236, 112);
 }
 
 .threadButtons:hover {
-    background-color: rgb(76, 180, 86);
+    background-image: linear-gradient(rgb(0 0 0/20%) 0 0);
     transform: scale(1.05);
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
-    border-color: rgb(50, 150, 60);
-    transition: all 0.5s ease;
+    transition: all 0.3s ease-in-out;
 }
 
 .commentButtons {
