--- a/hike-quest-app/src/components/Header/Header.module.css
+++ b/hike-quest-app/src/components/Header/Header.module.css
@@ -1,48 +1,3 @@
-/* .header {
-  display: flex;
-  align-items: center;
-  padding: 20px;
-  background-color: #afc6a0;
-  border-radius: 10px;
-  color: #273f17;
-  justify-content: space-between;
-}
-
-.heading {
-  margin: 0;
-  font-size: 30px;
-}
-
-.navOptions {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-}
-
-.button {
-  padding: 8px 18px;
-  border: none;
-  border-radius: 5px;
-  background-color: white;
-  color: #273f17;
-  font-size: 14px;
-  text-decoration: none;
-  cursor: pointer;
-  transition: background-color 0.3s, color 0.3s;
-}
-
-.button:hover {
-  background-color: #d8e2dc;
-  color: #273f17;
-}
-
-.button.active {
-  background-color: #273f17;
-  color: white;
-  font-weight: bold;
-} */
-
-
 h1 {
   align-items: left;
   display: flex;
@@ -69,4 +24,16 @@ a.active {
 
 nav {
   text-align: right;
+}
+
+.logoPicture {
+  width: 70px;
+  height: auto;
+}
+
+.logoContainer {
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 5px;
+  /* Add some padding to space the logo from the border */
 }
