css input styles, updated headings on landing page, also user/thread count msg

--- a/hike-quest-app/src/views/AllThreads/AllThreads.module.css
+++ b/hike-quest-app/src/views/AllThreads/AllThreads.module.css
@@ -27,3 +27,28 @@
     margin: 0;
     font-size: medium;
 }
+
+.input {
+    margin-left: 5px;
+    resize: none;
+  font-size: 12px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-sizing: border-box;
+  font-family: monospace;
+  height: 20px;
+  text-align: center;
+}
+
+.select{
+    margin-left: 5px;
+    resize: none;
+    font-size: 12px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-sizing: border-box;
+    font-family: monospace;
+    height: 15px;
+    text-align: center;
+}
+
