--- a/hike-quest-app/src/index.css
+++ b/hike-quest-app/src/index.css
@@ -77,6 +77,7 @@ button {
   justify-content: flex-end;
   transition: all 0.3s ease-in-out;
   cursor: pointer;
+  
 }
 
 .threadButtonsCancel {
@@ -104,6 +105,16 @@ button:hover {
   margin-left: 1px;
 }
 
+.searchContainer {
+  resize: none;
+  font-size: 14px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-sizing: border-box;
+  font-family: monospace;
+  height: 25px;
+  text-align: center;
+}
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
