--- a/hike-quest-app/src/components/Header/Header.module.css
+++ b/hike-quest-app/src/components/Header/Header.module.css
@@ -37,3 +37,112 @@ nav {
   padding: 5px;
   /* Add some padding to space the logo from the border */
 }
+
+
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  border-bottom: 1px solid #ddd;
+}
+
+.searchContainer {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.searchContainer input {
+  padding: 5px;
+  font-size: 16px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  width: 300px;
+}
+
+nav {
+  text-align: right;
+}
+
+a {
+  color: #53882f;
+  text-decoration: none;
+  margin-right: 20px;
+}
+
+a:hover {
+  background-color: #d8e2dc;
+  color: #273f17;
+}
+
+a.active {
+  background-color: magenta;
+  color: white;
+  font-weight: bold;
+}
+
+
+
+.profilePopup {
+  position: absolute;
+  right: 0; 
+  background-color: white;
+  border: 1px solid #ccc;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  border-radius: 6px;
+  z-index: 10;
+  min-width: 150px; 
+  max-width: 200px
+}
+
+
+.profilePopup button {
+  display: inline-block;
+  margin-bottom: 10px;
+  padding: 8px;
+  width: calc(100% - 16px); 
+  box-sizing: border-box;
+  font-size: 14px;
+  border-radius: 4px;
+  border: none;
+  background-color: #90ee90; 
+  color: black; 
+  cursor: pointer;
+}
+
+
+.profilePopup button:hover {
+  opacity: 0.9;
+}
+
+
+.editButton {
+  background-color: #f0f0f0;
+  color: #333;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
+
+.editButton:hover {
+  background-color: #e0e0e0;
+}
+
+
+.navButton {
+  background: transparent;
+  border: none;
+  padding: 5px; 
+  border-radius: 50%; 
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  background-color: #90ee90; 
+  width: 40px; 
+  height: 40px; 
+}
