--- a/hike-quest-app/src/views/SingleThread/SingleThread.css
+++ b/hike-quest-app/src/views/SingleThread/SingleThread.css
@@ -10,7 +10,7 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    border: 1px solid #000;
+    border: 1px solid var(--war-green-color);
     object-fit: cover;
 }
 
@@ -93,7 +93,7 @@
     font-size: larger;
     border-style: hidden;
     border-radius: 10px;
-    border-color: rgb(0, 0, 0);
+    border-color: var(--war-green-color);
     word-wrap: break-word;
     overflow-wrap: break-word;
 }
@@ -121,7 +121,7 @@
     height: 40px;
     padding: 10px;
     font-size: 14px;
-    border: 1px solid #ccc;
+    border: 1px solid var(--war-green-color);
     border-radius: 10px;
     box-sizing: border-box;
     font-family: monospace;
@@ -135,7 +135,7 @@ textarea.commentBox {
 .locationBox {
     resize: none;
     font-size: 14px;
-    border: 1px solid #ccc;
+    border: 1px solid var(--war-green-color);
     border-radius: 10px;
     box-sizing: border-box;
     font-family: monospace;
@@ -153,7 +153,7 @@ textarea.commentBox {
     display: block;
     margin: 20px;
     padding: 20px;
-    border-color: rgb(0, 0, 0);
+    border-color: var(--war-green-color);
 }
 
 .actualComment {
@@ -163,7 +163,7 @@ textarea.commentBox {
     font-size: large;
     border-style: double;
     border-radius: 10px;
-    border-color: rgb(0, 0, 0);
+    border-color: var(--war-green-color);
     word-wrap: break-word;
     overflow-wrap: break-word;
     margin: 0;
