--- a/hike-quest-app/src/views/Footer/Footer.module.css
+++ b/hike-quest-app/src/views/Footer/Footer.module.css
@@ -1,32 +1,41 @@
 .footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    background-color: #afc6a0;
-    border-radius: 10px; 
-    color: white;
-  }
-  
-  .topRow {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    
-  }
-  
-  .terms {
-    text-align: left;
-    padding-left: 30px;
-  }
-  
-  .about {
-    text-align: right;
-    padding-right: 30px;
-  }
-  
-  .rights {
-    text-align: center;
-    margin-top: 10px;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--war-green-color);
+  color: white;
+  padding: 20px;
+  border-radius: 10px;
+  margin-top: 20px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+}
+
+.footerContent {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  max-width: 1200px;
+}
+
+.footerButton {
+  background-color: #ffffff;
+  color: var(--war-green-color);
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 12px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.footerButton:hover {
+  background-color: var(--war-green-color);
+  color: #ffffff;
+}
+
+.rights {
+  text-align: center;
+  font-size: 14px;
+  margin: 0;
+}
