--- a/hike-quest-app/src/components/Header/Header.module.css
+++ b/hike-quest-app/src/components/Header/Header.module.css
@@ -88,12 +88,11 @@ a.active {
 
 .profilePopup {
   position: absolute;
-  right: 0;
   background-color: white;
   border: 1px solid #ccc;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 10px;
-  border-radius: 6px;
+  border-radius: 10px;
   z-index: 10;
   min-width: 150px;
   max-width: 200px
@@ -107,10 +106,10 @@ a.active {
   width: calc(100% - 16px);
   box-sizing: border-box;
   font-size: 14px;
-  border-radius: 4px;
   border: none;
   background-color: var(--war-green-color);
-  color: black;
+  color: white;
+  border-radius: 20px;
   cursor: pointer;
 }
 
@@ -136,7 +135,7 @@ a.active {
 .navButton {
   background-color: var(--war-green-color);
   border: 3px solid transparent;
-  color: rgb(240, 233, 233);
+  color: white;
   border-color: transparent;
   margin: 5px;
   padding-inline: 10px;
