create content resizing and logo fix

--- a/hike-quest-app/src/views/SingleThread/SingleThread.css
+++ b/hike-quest-app/src/views/SingleThread/SingleThread.css
@@ -200,6 +200,7 @@ hr {
 
 .createThreadInput,
 .createThreadTextarea {
+    resize: none;
     width: 100%;
     max-width: 500px;
     padding: 10px;
@@ -212,7 +213,7 @@ hr {
 
 .createThreadTextarea {
     min-height: 100px;
-    resize: vertical;
+    resize: none;
 }
 
 .createThreadButton {
